--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -6,4 +6,9 @@
 
 <ion-content class="ion-padding">
 
+  <app-program-people-affected
+    [programId]="programId"
+    [userRole]="userRole"
+  ></app-program-people-affected>
+
 </ion-content>
