AB#2146 Move (old) ProgramPeopleComponent, hard-code selectedPhase

--- a/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
@@ -6,4 +6,9 @@
 
 <ion-content class="ion-padding">
 
+  <app-program-people
+    [programId]="programId"
+    [userRole]="userRole"
+  ></app-program-people>
+
 </ion-content>
