--- a/interfaces/HO-Portal/src/app/pages/evaluation/evaluation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/evaluation/evaluation.page.html
@@ -6,4 +6,10 @@
 
 <ion-content class="ion-padding">
 
+  <app-phase-next
+    [programId]="programId"
+    [selectedPhase]="thisPhase"
+    [phaseReady]="true"
+  ></app-phase-next>
+
 </ion-content>
