--- a/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
+++ b/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
@@ -6,6 +6,12 @@
 
 <ion-content class="ion-padding">
 
+  <app-phase-next
+    [programId]="programId"
+    [selectedPhase]="thisPhase"
+    [phaseReady]="true"
+  ></app-phase-next>
+
   <app-program-payout
     [programId]="programId"
   ></app-program-payout>
