AB#2223 export-btn only enabled  program-manager

--- a/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
+++ b/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
@@ -1,4 +1,5 @@
-<confirm-prompt (confirm)="getInclusionList()" 
+<confirm-prompt [disabled]="btnDisabled()"
+                (confirm)="getInclusionList()" 
                 [subHeader]="'page.program.export-inclusion.confirm-message'|translate" 
 >
   {{ 'page.program.export-inclusion.export-list'|translate }}
