AB#2201 test-include component

--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -69,6 +69,10 @@
                         [phaseReady]="phaseReady"
                         (isNewPhase)="onNewPhase($event)"
         ></app-phase-next>
+
+        <!-- <app-export-inclusion [programId]="program?.id"
+                              [userRole]="currentUserRole"
+        ></app-export-inclusion> -->
         
         <app-program-people-affected [selectedPhase]="selectedPhase"
                                      [activePhase]="activePhase"
