--- a/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
@@ -1,14 +1,22 @@
-<span *ngFor="let phase of programPhases"
-      class="phase-navigation"
+<span
+  *ngFor="let phase of programPhases"
+  class="phase-navigation"
 >
-  <ion-button [color]="getColor(phase)"
-              [fill]="getFill(phase)"
-              [disabled]="(phase.id > activePhaseId)"
-              (click)="changePhase(phase.id)"
+  <ion-button
+    [routerLink]="['/program', programId, convertToSlug(phase.name)]"
+    routerDirection="root"
+    routerLinkActive
+    #rlaPhase="routerLinkActive"
+    [color]="rlaPhase.isActive ? 'primary' : 'medium'"
+    [disabled]="isDisabled(phase)"
+    [fill]="getFill(phase)"
+    size="small"
   >
     {{ phase.label }}
   </ion-button>
-  <span *ngIf="(phase.id === selectedPhaseId)"
-        class="phase-navigation--indicator"
+
+  <span
+    *ngIf="rlaPhase.isActive"
+    class="phase-navigation--indicator"
   ></span>
 </span>
