Add callbacks/events for PhaseReady-event/triggers

--- a/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
+++ b/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
@@ -9,11 +9,12 @@
   <app-phase-next
     [programId]="programId"
     [selectedPhase]="thisPhase"
-    [phaseReady]="true"
+    [phaseReady]="isReady"
   ></app-phase-next>
 
   <app-program-payout
     [programId]="programId"
+    (isCompleted)="onReady($event)"
   ></app-program-payout>
 
 </ion-content>
