--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -9,12 +9,13 @@
   <app-phase-next
     [programId]="programId"
     [selectedPhase]="thisPhase"
-    [phaseReady]="true"
+    [phaseReady]="isReady"
   ></app-phase-next>
 
   <app-program-people-affected
     [programId]="programId"
     [userRole]="userRole"
+    (isCompleted)="onReady($event)"
   ></app-program-people-affected>
 
 </ion-content>
