--- a/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
@@ -12,6 +12,11 @@
     [phaseReady]="isReady"
   ></app-phase-next>
 
+  <app-export-inclusion
+    [programId]="programId"
+    [userRole]="userRole"
+  ></app-export-inclusion>
+
   <app-program-people
     [programId]="programId"
     [userRole]="userRole"
