--- a/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
+++ b/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
@@ -1,6 +1,8 @@
-<confirm-prompt [disabled]="btnDisabled()"
-                (confirm)="getInclusionList()" 
-                [subHeader]="'page.program.export-inclusion.confirm-message'|translate" 
+<confirm-prompt
+  [disabled]="btnDisabled()"
+  (confirm)="getInclusionList()"
+  [subHeader]="'page.program.export-inclusion.confirm-message'|translate"
 >
+  <ion-icon name="download" slot="start"></ion-icon>
   {{ 'page.program.export-inclusion.export-list'|translate }}
 </confirm-prompt>
