AB#2152 Cleanup side-menu + align home/help-pages

--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -1,70 +1,3 @@
 <ion-app>
-  <ion-split-pane contentId="main" when="true">
-    <ion-menu contentId="main">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>{{ 'MENU'|translate }}</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false">
-            <ion-item routerLink="/login"
-                      routerDirection="root"
-                      routerLinkActive
-                      #rlaLogin="routerLinkActive"
-                      [detail]="rlaLogin.isActive"
-                      [color]="rlaLogin.isActive ? 'primary' : ''"
-                      *ngIf="!isLoggedIn"
-            >
-              <ion-icon slot="start" name="log-in"></ion-icon>
-              <ion-label>
-                {{ 'LOGIN'|translate }}
-              </ion-label>
-            </ion-item>
-
-            <ion-item routerLink="/home"
-                      routerLinkActive
-                      routerDirection="root"
-                      routerLinkActive
-                      #rlaHome="routerLinkActive"
-                      [detail]="rlaHome.isActive"
-                      [color]="rlaHome.isActive ? 'primary' : ''"
-                      *ngIf="isLoggedIn"
-            >
-              <ion-icon slot="start" name="home"></ion-icon>
-              <ion-label>
-                {{ 'page.home.pageTitle'|translate }}
-              </ion-label>
-            </ion-item>
-            <ion-item routerLink="/help"
-                      routerDirection="root"
-                      routerLinkActive
-                      #rlaHelp="routerLinkActive"
-                      [detail]="rlaHelp.isActive"
-                      [color]="rlaHelp.isActive ? 'primary' : ''"
-                      *ngIf="isLoggedIn"
-            >
-              <ion-icon slot="start" name="help"></ion-icon>
-              <ion-label>
-                {{ 'page.help.pageTitle'|translate }}
-              </ion-label>
-            </ion-item>
-            <ion-item button="true"
-                      (click)="logout()"
-                      *ngIf="isLoggedIn"
-            >
-              <ion-icon slot="start" name="log-out"></ion-icon>
-              <ion-label>
-                {{ 'LOGOUT'|translate }}
-                <ion-note class="ion-margin-start">{{ currentUserRole }}</ion-note>
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main"></ion-router-outlet>
-  </ion-split-pane>
+  <ion-router-outlet></ion-router-outlet>
 </ion-app>
