--- a/interfaces/HO-Portal/src/app/components/user-state/user-state.component.html
+++ b/interfaces/HO-Portal/src/app/components/user-state/user-state.component.html
@@ -7,6 +7,8 @@
   <ion-note class="ion-text-nowrap ion-hide-sm-down">{{ userName }}</ion-note>
 </span>
 
+&nbsp;
+
 <ion-button
   type="button"
   [title]="'user-state.log-out'|translate"
