--- a/interfaces/HO-Portal/src/app/login/login.page.html
+++ b/interfaces/HO-Portal/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ 'LOGIN'|translate }}</ion-title>
+    <ion-title>{{ 'page.login.pageTitle'|translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
