--- a/interfaces/HO-Portal/src/app/home/home.page.html
+++ b/interfaces/HO-Portal/src/app/home/home.page.html
@@ -1,11 +1,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-button
+        [title]="'page.help.pageTitle'|translate"
+        [attr.aria-label]="'page.help.pageTitle'|translate"
+        routerLink="/help"
+        routerDirection="root"
+        fill="clear"
+        size="small"
+        color="medium"
+      >
+        <ion-icon name="help" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title>
-      {{ 'page.home.pageTitle'|translate }}
+      <h1 class="ion-no-margin">
+        {{ 'page.home.pageTitle'|translate }}
+      </h1>
     </ion-title>
+    <ion-buttons slot="end">
+      <app-user-state></app-user-state>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
