Fix syntax issues

--- a/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
@@ -13,7 +13,7 @@
       *ngFor="let program of items"
       detail="true"
       button="true"
-      [routerLink]="'/program/' + program.id + '/dashboard'"
+      [routerLink]="['/program', program.id, 'dashboard']"
       routerDirection="root"
     >
       <ion-label>
