Move ExportIncludionList-component

--- a/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/review-inclusion/review-inclusion.page.html
@@ -12,4 +12,9 @@
     [phaseReady]="true"
   ></app-phase-next>
 
+  <app-export-inclusion
+    [programId]="programId"
+    [userRole]="userRole"
+  ></app-export-inclusion>
+
 </ion-content>
