AB#2241 Put ProgramPhaseService in charge of switching phases
Related AB#2219

--- a/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
@@ -8,7 +8,7 @@
 
   <app-phase-next
     [programId]="programId"
-    [selectedPhase]="thisPhase"
+    [thisPhaseName]="thisPhase"
     [phaseReady]="isReady"
   ></app-phase-next>
 
