--- a/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
@@ -10,7 +10,7 @@
   <confirm-prompt
     *ngIf="btnAvailable"
     [disabled]="checkDisabled()"
-    (confirm)="advancePhase(activePhase?.id)"
+    (confirm)="advancePhase()"
     [subHeader]="btnText"
     class="ion-margin-start"
   >
