--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -8,7 +8,7 @@
 
   <app-phase-next
     [programId]="programId"
-    [selectedPhase]="thisPhase"
+    [thisPhaseName]="thisPhase"
     [phaseReady]="isReady"
   ></app-phase-next>
 
