--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -72,8 +72,7 @@
   >
     <dialogue-turn [isSpoken]="checkValidationErrors(question.code)">
       <p *ngIf="(question.answerType === answerType.phoneNumber) && validationErrors.includes('phoneNumber')">
-        <play-text-audio key="validation.phoneNumber" class="ion-float-start ion-margin-end"></play-text-audio>
-        {{ 'validation.phoneNumber'|translate }}
+        {{ 'shared.validate-phoneNumber'|translate }}
       </p>
     </dialogue-turn>
   </div>
@@ -84,8 +83,7 @@
                [isSpoken]="checkValidationErrors() && allQuestionsShown"
 >
   <p>
-    <play-text-audio key="validation.generic-error" class="ion-float-start ion-margin-end"></play-text-audio>
-    {{ 'validation.generic-error'|translate }}
+    {{ 'shared.validate-generic-error'|translate }}
   </p>
 </dialogue-turn>
 
@@ -95,9 +93,6 @@
                [isSpoken]="!checkValidationErrors() && allQuestionsShown"
 >
   <ion-row class="ion-nowrap ion-align-items-center">
-    <play-text-audio [key]="submitLabel"
-                     size="default"
-    ></play-text-audio>
     <ion-button type="submit"
                 (click)="doSubmit()"
                 [disabled]="isSubmitted"
