--- a/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
+++ b/interfaces/AW-App/src/app/validation-components/validate-fsp/validate-fsp.component.html
@@ -1,3 +1,46 @@
-<p>
-  validate-fsp works!
-</p>
+<section #startMeeting>
+  <dialogue-turn [actor]="program?.ngo"
+                 *ngIf="fspSubmitted"
+                 [isSpoken]="fspSubmitted"
+  >
+    <p>
+      <span [innerHTML]="'validation.validate-fsp.conclusion'|translate:{ name:'<strong>'+chosenFsp?.fsp+'</strong>' }"></span>
+    </p>
+  </dialogue-turn>
+
+  <form *ngIf="questions?.length">
+    <dialogue-turn isConnected="true"
+                   isSpoken="true"
+    >
+      <p>
+        {{ 'validation.validate-fsp.introduction'|translate }}
+      </p>
+    </dialogue-turn>
+
+    <q-and-a-set [questions]="questions"
+                 [answers]="customAttributeAnswers"
+                 [(isSubmitted)]="isSubmitted"
+                 [(isEditing)]="isEditing"
+                 (submit)="saveCustomAttributes($event)"
+                 submitLabel="validation.validate-fsp.submit"
+    ></q-and-a-set>
+
+    <dialogue-turn [actor]="program?.ngo"
+                   *ngIf="showResultSuccess"
+                   [isSpoken]="showResultSuccess"
+    >
+      <p>
+        {{ 'validation.validate-fsp.conclusion'|translate }}
+      </p>
+    </dialogue-turn>
+    <dialogue-turn [actor]="program?.ngo"
+                   *ngIf="showResultError"
+                   [isSpoken]="showResultError"
+    >
+      <p>
+        {{ 'shared.validation-generc-error'|translate }}
+      </p>
+    </dialogue-turn>
+  </form>
+
+</section>
