AB#2247  Refactor definition of url-paths for program-phases

--- a/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
@@ -3,7 +3,7 @@
   class="phase-navigation"
 >
   <ion-button
-    [routerLink]="['/program', programId, phase.path]"
+    [routerLink]="['/program', programId, phase.name]"
     routerLinkActive
     #rlaPhase="routerLinkActive"
     [color]="rlaPhase.isActive ? 'primary' : 'medium'"
