AB#2253 exec btnDisbabled upon programId available

--- a/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
+++ b/interfaces/HO-Portal/src/app/program/export-inclusion/export-inclusion.component.html
@@ -1,5 +1,5 @@
 <confirm-prompt
-  [disabled]="btnDisabled()"
+  [disabled]="disabled"
   (confirm)="getInclusionList()"
   [subHeader]="'page.program.export-inclusion.confirm-message'|translate"
 >
