AB#2251 Put ProgramPhaseService in charge of disabled-state for navigation

--- a/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
@@ -7,7 +7,7 @@
     routerLinkActive
     #rlaPhase="routerLinkActive"
     [color]="rlaPhase.isActive ? 'primary' : 'medium'"
-    [disabled]="isDisabled(phase)"
+    [disabled]="phase.disabled"
     [fill]="getFill(phase)"
     size="small"
   >
