AB#2194 program-people-affected in inclusion

--- a/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
+++ b/interfaces/HO-Portal/src/app/pages/inclusion/inclusion.page.html
@@ -12,10 +12,13 @@
     [phaseReady]="isReady"
   ></app-phase-next>
 
-  <app-program-people
+  <app-program-people-affected
     [programId]="programId"
     [userRole]="userRole"
+    [thisPhase]="thisPhase"
     (isCompleted)="onReady($event)"
-  ></app-program-people>
+  ></app-program-people-affected>
+
+  <app-program-people [programId]="programId" [userRole]="userRole" (isCompleted)="onReady($event)"></app-program-people>
 
 </ion-content>
