--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -15,6 +15,7 @@
   <app-program-people-affected
     [programId]="programId"
     [userRole]="userRole"
+    [thisPhase]="thisPhase"
     (isCompleted)="onReady($event)"
   ></app-program-people-affected>
 
