AB#2255 program-people-affected in payment-page

--- a/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
+++ b/interfaces/HO-Portal/src/app/pages/payment/payment.page.html
@@ -17,4 +17,11 @@
     (isCompleted)="onReady($event)"
   ></app-program-payout>
 
+  <app-program-people-affected 
+    [programId]="programId"
+    [userRole]="userRole"
+    [thisPhase]="thisPhase"
+    (isCompleted)="onReady($event)"
+  ></app-program-people-affected>
+
 </ion-content>
